force-app/main/default/objects/Bank_Info__c/Bank_Info__c.object-meta.xml
<CustomObject>
    <label>Bank Info</label>
    <nameField>
        <displayFormat>B_INFO-{000000}</displayFormat>
        <label>Bank Info Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>