force-app/main/default/objects/Bank_Info__c/fields/Destination_Account__c.field-meta.xml
<CustomField>
    <fullName>Destination_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Bank Infos (Destination Account)</relationshipLabel>
    <relationshipName>Bank_Infos1</relationshipName>
    <type>Lookup</type>
</CustomField>