force-app/main/default/objects/Bank_Info__c/fields/LineID__c.field-meta.xml
<CustomField>
    <fullName>LineID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LineID</label>
    <referenceTo>Transaction_Line__c</referenceTo>
    <relationshipLabel>Bank Infos</relationshipLabel>
    <relationshipName>Bank_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>