force-app/main/default/objects/Bank_Info__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Bank Infos</relationshipLabel>
    <relationshipName>Bank_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>