force-app/main/default/objects/Bank_Info__c/fields/TransactionID__c.field-meta.xml
<CustomField>
    <fullName>TransactionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TransactionID</label>
    <referenceTo>Loan_Transaction__c</referenceTo>
    <relationshipLabel>Bank Infos</relationshipLabel>
    <relationshipName>Bank_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>